crates/plotnik-tests/tests/04-emit/types/definitions/error_nullable_repeat.txt
MaybeId = (identifier)?

Q = (program
  (expression_statement
    (array
      (MaybeId)* @xs
    )
  )
)
------------------ DIAGNOSTICS -------------------
error: the referenced definition can match zero nodes, but a `*` repeat must consume input on every iteration — its empty case could never occur here
 --> query.ptk:6:7
  |
1 | MaybeId = (identifier)?
  |           ------------- can match zero nodes here
...
6 |       (MaybeId)* @xs
  |       ^^^^^^^^^^
  |
help: make the definition consume at least one node, or drop the quantifier
